Linear regression model performance evaluation

--- a/Tensorflow/linear_regression.ipynb
+++ b/Tensorflow/linear_regression.ipynb
@@ -438,6 +438,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error (MAE): 213.67335963776523\n",
+      "Mean Squared Error (MSE): 60480.48402371288\n",
+      "R² Score: 0.9994978514671149\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the model performance\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Mean Absolute Error (MAE): {mae}\")\n",
+    "print(f\"Mean Squared Error (MSE): {mse}\")\n",
+    "print(f\"R² Score: {r2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted amount: 340320.2168996031\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wanyua/Dev/Python-for-Deep-Learning/env/lib/python3.8/site-packages/sklearn/base.py:465: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# predicting a new data point\n",
+    "import numpy as np\n",
+    "\n",
+    "# Example new data point (replace with real values)\n",
+    "new_data = np.array([[1, 45, 600000, 10000, 250000]])  # Example: gender=1, age=45, salary=60000, debt=10000, worth=250000\n",
+    "\n",
+    "# Transform the new data before prediction\n",
+    "# new_data_scaled = scaler.transform(new_data)  \n",
+    "\n",
+    "# Predict\n",
+    "new_prediction = model.predict(new_data)\n",
+    "print(f\"Predicted amount: {new_prediction[0]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
