--- a/Tensorflow/logistic_regression.ipynb
+++ b/Tensorflow/logistic_regression.ipynb
@@ -57,12 +57,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import roc_auc_score, roc_curve\n",
+    "import matplotlib.pyplot as plt \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Smoker</th>\n",
+       "      <th>Cholesterol</th>\n",
+       "      <th>Heart_Disease</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>42</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Bachelor's Degree</td>\n",
+       "      <td>65000</td>\n",
+       "      <td>No</td>\n",
+       "      <td>180</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>55</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>High School Diploma</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>245</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Master's Degree</td>\n",
+       "      <td>80000</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>210</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>39</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Some College</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>195</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Some College</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>No</td>\n",
+       "      <td>170</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  Gender            Education  Income Smoker  Cholesterol Heart_Disease\n",
+       "0   42  Female    Bachelor's Degree   65000     No          180            No\n",
+       "1   55    Male  High School Diploma   40000    Yes          245           Yes\n",
+       "2   30  Female      Master's Degree   80000    Yes          210            No\n",
+       "3   39    Male         Some College   50000    Yes          195            No\n",
+       "4   27    Male         Some College   30000     No          170            No"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('Data/heartdiseases.csv')\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50, 7)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
    ]
   },
   {
