Logistic regression - split data into train and test splits

--- a/Tensorflow/logistic_regression.ipynb
+++ b/Tensorflow/logistic_regression.ipynb
@@ -833,13 +833,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split data into features and label\n",
     "X = data_final.drop('Heart_Disease', axis=1) # axis = 1, removes the column not rows\n",
-    "y = data_final['Heart_Disease']"
+    "y = data_final['Heart_Disease']\n",
+    "\n",
+    "# Split data into train and test splits\n",
+    "X_train,X_test, y_train, y_test = train_test_split(X,y, test_size=0.2, random_state=42)"
    ]
   },
   {
