Logistic regression - perfomance evaluation

--- a/Tensorflow/logistic_regression.ipynb
+++ b/Tensorflow/logistic_regression.ipynb
@@ -971,6 +971,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.30141012, 0.9959927 , 0.99996521, 1.00176759, 0.95946595,\n",
+       "        1.00785581, 1.00966092, 0.9980457 , 0.9883148 ]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odds_ratios = np.exp(log_reg.coef_)\n",
+    "odds_ratios"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
