Logistic regression - perfomance evaluation

--- a/Tensorflow/logistic_regression.ipynb
+++ b/Tensorflow/logistic_regression.ipynb
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1041,6 +1041,7 @@
     }
    ],
    "source": [
+    "#  Classification Report (Precision, Recall, F1-Score)\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
     "print(classification_report(y_test, y_pred))\n"
@@ -1048,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1060,6 +1061,7 @@
     }
    ],
    "source": [
+    "# Accuracy score\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
@@ -1068,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1083,6 +1085,7 @@
     }
    ],
    "source": [
+    "# Precision-Recall Curve\n",
     "from sklearn.metrics import precision_recall_curve\n",
     "\n",
     "precision, recall, thresholds = precision_recall_curve(y_test, y_pred_proba)\n",
@@ -1092,6 +1095,48 @@
     "plt.ylabel('Precision')\n",
     "plt.title('Precision-Recall Curve')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log Loss: 0.3052\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Log Loss (Cross-Entropy Loss)\n",
+    "from sklearn.metrics import log_loss\n",
+    "\n",
+    "logloss = log_loss(y_test, y_pred_proba)\n",
+    "print(f\"Log Loss: {logloss:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matthews Correlation Coefficient: 0.80\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Matthews Correlation Coefficient (MCC)\n",
+    "from sklearn.metrics import matthews_corrcoef\n",
+    "\n",
+    "mcc = matthews_corrcoef(y_test, y_pred)\n",
+    "print(f\"Matthews Correlation Coefficient: {mcc:.2f}\")\n"
    ]
   },
   {
