Decision trees: visualizing the Decision tree

--- a/Tensorflow/decision_trees.ipynb
+++ b/Tensorflow/decision_trees.ipynb
@@ -206,6 +206,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 1, 0, 2, 1, 2, 0, 0, 2, 1, 0, 2, 1, 1, 0, 1, 1, 0, 0, 1, 1,\n",
+       "       2, 0, 2, 1, 0, 0, 1, 2])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make predictions on the testing data\n",
+    "y_pred = clf.predict(X_test)\n",
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the model: 0.9666666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy = accuracy_score(y_pred, y_test)\n",
+    "print(f\"Accuracy of the model: {accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'iris_tree.pdf'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "(process:23792): Gtk-WARNING **: 15:40:30.909: Locale not supported by C library.\n",
+      "\tUsing the fallback 'C' locale.\n",
+      "\n",
+      "(evince:23792): Gtk-WARNING **: 15:40:31.022: Theme parsing error: gtk-keys.css:1:0: Failed to import: Error opening file /snap/code/184/usr/share/themes/Default/gtk-3.0/gtk-keys.css: Permission denied\n",
+      "Gtk-Message: 15:40:31.024: Failed to load module \"canberra-gtk-module\"\n",
+      "Gtk-Message: 15:40:31.029: Failed to load module \"canberra-gtk-module\"\n",
+      "/home/wanyua/snap/code/common/.cache/gio-modules/libdconfsettings.so: cannot open shared object file: Permission denied\n",
+      "Failed to load module: /home/wanyua/snap/code/common/.cache/gio-modules/libdconfsettings.so\n",
+      "\n",
+      "(evince:23792): Gtk-WARNING **: 15:40:31.129: Could not load a pixbuf from icon theme.\n",
+      "This may indicate that pixbuf loaders or the mime database could not be found.\n",
+      "**\n",
+      "Gtk:ERROR:../../../../gtk/gtkiconhelper.c:494:ensure_surface_for_gicon: assertion failed (error == NULL): Failed to load /usr/share/icons/Yaru/48x48/status/image-missing.png: Unable to load image-loading module: /snap/code/184/usr/lib/x86_64-linux-gnu/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader-png.so: /snap/code/184/usr/lib/x86_64-linux-gnu/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader-png.so: cannot open shared object file: Permission denied (gdk-pixbuf-error-quark, 5)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bail out! Gtk:ERROR:../../../../gtk/gtkiconhelper.c:494:ensure_surface_for_gicon: assertion failed (error == NULL): Failed to load /usr/share/icons/Yaru/48x48/status/image-missing.png: Unable to load image-loading module: /snap/code/184/usr/lib/x86_64-linux-gnu/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader-png.so: /snap/code/184/usr/lib/x86_64-linux-gnu/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader-png.so: cannot open shared object file: Permission denied (gdk-pixbuf-error-quark, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Visualize the decision tree using graphviz\n",
+    "dot_data = export_graphviz(\n",
+    "    clf,\n",
+    "    out_file=None,\n",
+    "    feature_names=iris.feature_names,\n",
+    "    class_names=iris.target_names,\n",
+    "    filled=True,\n",
+    "    rounded=True,\n",
+    "    special_characters=True\n",
+    ")\n",
+    "\n",
+    "graph = graphviz.Source(dot_data)\n",
+    "graph.render('iris_tree', view=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
