Decision trees: evaluating model performance

--- a/Tensorflow/decision_trees.ipynb
+++ b/Tensorflow/decision_trees.ipynb
@@ -306,6 +306,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[11  0  0]\n",
+      " [ 0 12  1]\n",
+      " [ 0  0  6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(cm)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        11\n",
+      "           1       1.00      0.92      0.96        13\n",
+      "           2       0.86      1.00      0.92         6\n",
+      "\n",
+      "    accuracy                           0.97        30\n",
+      "   macro avg       0.95      0.97      0.96        30\n",
+      "weighted avg       0.97      0.97      0.97        30\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Precision, recall and F1-score\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique values in y_test: [0 1 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Check unique values in y_test\n",
+    "print(\"Unique values in y_test:\", np.unique(y_test))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiclass AUC Score: 0.98\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ROC Curve & AUC Score\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "auc_score = roc_auc_score(y_test, clf.predict_proba(X_test), multi_class='ovr')\n",
+    "print(f\"Multiclass AUC Score: {auc_score:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
