Model performance evaluation

--- a/Tensorflow/random_forests.ipynb
+++ b/Tensorflow/random_forests.ipynb
@@ -188,6 +188,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make predictions\n",
+    "predictions = rf_classifier.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy of the model: 0.9649122807017544\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the classifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(f\"The accuracy of the model: {accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
