--- a/Tensorflow/support_vector_machine.ipynb
+++ b/Tensorflow/support_vector_machine.ipynb
@@ -289,6 +289,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions: [1 0 0 1 0 0 0 1 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make predictions\n",
+    "np.random.seed(1)\n",
+    "X_test = np.random.randn(10,2)\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
+    "print(f\"Predictions: {y_pred}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
