Unsupervised Machine Learning

--- a/Tensorflow/K_means_clustering.ipynb
+++ b/Tensorflow/K_means_clustering.ipynb
@@ -35,6 +35,8 @@
     "- Anomaly detection in fraud detection\n",
     "- Image compression using PCA\n",
     "- Topic modeling in Natural Language Processing (NLP)\n",
+    "- Recommendation systems\n",
+    "- Image and video analysis\n",
     "\n",
     "### Advantages\n",
     "- Can handle large datasets  \n",
