--- a/Tensorflow/K_means_clustering.ipynb
+++ b/Tensorflow/K_means_clustering.ipynb
@@ -55,6 +55,54 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### K-Means Clustering\n",
+    "\n",
+    "### Overview\n",
+    "K-Means is an **unsupervised machine learning algorithm** used for clustering data into *K* distinct groups. It partitions data points into clusters based on their similarity.\n",
+    "\n",
+    "### How K-Means Works\n",
+    "1. **Choose the number of clusters (K).**\n",
+    "2. **Initialize K cluster centroids** randomly.\n",
+    "3. **Assign each data point to the nearest centroid** (based on distance, usually Euclidean).\n",
+    "4. **Update centroids** by computing the mean of all points assigned to a cluster.\n",
+    "5. **Repeat steps 3 and 4** until centroids no longer change significantly.\n",
+    "\n",
+    "### Algorithm Steps\n",
+    "1. Select the number of clusters **K**.\n",
+    "2. Initialize **K** cluster centers (randomly or using methods like K-Means++ initialization).\n",
+    "3. Repeat until convergence:\n",
+    "   - Assign each data point to the **nearest** centroid.\n",
+    "   - Recalculate the centroids as the **mean** of all assigned points.\n",
+    "   - Stop when centroids do not change or a maximum number of iterations is reached.\n",
+    "\n",
+    "### Choosing the Optimal K\n",
+    "- **Elbow Method**: Plots the Within-Cluster Sum of Squares (WCSS) and identifies the \"elbow point\" where adding more clusters does not significantly reduce WCSS.\n",
+    "- **Silhouette Score**: Measures how well each data point fits within its assigned cluster.\n",
+    "\n",
+    "## Advantages\n",
+    "- Simple and easy to implement  \n",
+    "- Scales well to large datasets  \n",
+    "- Works well with well-separated clusters  \n",
+    "\n",
+    "## Disadvantages\n",
+    "- Sensitive to the initial choice of centroids  \n",
+    "- Struggles with non-spherical clusters  \n",
+    "- Requires pre-defining K  \n",
+    "\n",
+    "## Applications of K-Means\n",
+    "- **Customer segmentation** in marketing  \n",
+    "- **Image compression** by clustering similar colors  \n",
+    "- **Anomaly detection** in fraud analysis  \n",
+    "- **Document classification** in NLP  \n",
+    "\n",
+    "### Summary\n",
+    "K-Means is a powerful clustering algorithm that partitions data into K clusters based on similarity. It is widely used in various fields for pattern recognition and data analysis.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
