Hierachical Clustering: Visualize the dendrogram

--- a/Tensorflow/hierachical_clustering.ipynb
+++ b/Tensorflow/hierachical_clustering.ipynb
@@ -38,7 +38,49 @@
     "2. **Merge the two closest clusters** based on the chosen linkage method.  \n",
     "3. **Repeat the process** until only one cluster remains.  \n",
     "4. **Visualize the clustering** using a **dendrogram** (tree-like diagram).  \n",
-    "\n"
+    "\n",
+    "# **Hierarchical Clustering: Pros and Cons**\n",
+    "\n",
+    "### **Pros (Advantages)**  \n",
+    "1. **No Need to Specify Number of Clusters**  \n",
+    "   - Unlike **K-Means**, hierarchical clustering doesn’t require predefining the number of clusters.  \n",
+    "\n",
+    "2. **Produces a Dendrogram for Visualization**  \n",
+    "   - The dendrogram provides a clear **hierarchical structure** of the data, making it easy to decide the number of clusters.  \n",
+    "\n",
+    "3. **Captures Nested Clusters**  \n",
+    "   - Works well for **hierarchical relationships** (e.g., species classification, social networks).  \n",
+    "\n",
+    "4. **Works Well for Small Datasets**  \n",
+    "   - It can accurately capture relationships when dealing with a small number of data points.  \n",
+    "\n",
+    "5. **Can Handle Non-Spherical Clusters**  \n",
+    "   - Unlike K-Means, hierarchical clustering **doesn’t assume** clusters are spherical, making it suitable for complex shapes.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Cons (Disadvantages)**  \n",
+    "1. **Computationally Expensive**  \n",
+    "   - Time complexity is **O(n²) to O(n³)**, making it impractical for very large datasets (**K-Means is faster**).  \n",
+    "\n",
+    "2. **Sensitive to Noisy Data & Outliers**  \n",
+    "   - Can produce **incorrect** merges due to noisy data or extreme values.  \n",
+    "\n",
+    "3. **Not Ideal for Large Datasets**  \n",
+    "   - Since it computes distances between all points, it becomes **memory-intensive** for thousands of data points.  \n",
+    "\n",
+    "4. **Difficult to Undo Splits**  \n",
+    "   - Once a point is merged into a cluster, it **cannot be reassigned**, unlike K-Means, where clusters can shift dynamically.  \n",
+    "\n",
+    "5. **Choosing the Right Cut-Off is Tricky**  \n",
+    "   - Deciding **where to cut the dendrogram** to form clusters is sometimes subjective and dataset-dependent.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **When to Use Hierarchical Clustering?**  \n",
+    "- Best for **small to medium datasets** where interpretability is important.  \n",
+    "- Useful when **no predefined number of clusters is known**.  \n",
+    "- Works well for **nested or hierarchical structures** (e.g., biological taxonomy, customer segmentation).  \n"
    ]
   },
   {
